[gd_scene load_steps=2 format=3 uid="uid://bo3qneh8unvgi"]

[ext_resource type="Script" uid="uid://bixe2i04230d1" path="res://scenes/group_aliens.gd" id="1_2jyeg"]

[node name="groupAliens" type="Node"]
script = ExtResource("1_2jyeg")

[node name="DownTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BonusTimer" type="Timer" parent="."]

[connection signal="timeout" from="DownTimer" to="." method="_on_down_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_bonus_timer_timeout"]
